<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:text="@string/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:layout_gravity="center_horizontal"
        android:padding="24dp"/>

    <Button
        android:text="@string/option_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option_1_button"/>

    <Button
        android:text="@string/option_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option_2_button"
        />

    <Button
        android:text="@string/option_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option_3_button"
        />

    <Button
        android:text="@string/option_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option_4_button"/>

</LinearLayout>
